<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    android:layout_width="200dp"
    android:layout_height="wrap_content"
    android:background="@color/dark_yellow_main_screen_bg"
    android:orientation="vertical">

    <Button
        android:id="@+id/btnHome"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginBottom="1dp"
        android:layout_weight="1"
        android:background="@color/dark_grey_cancel_button"
        android:gravity="left|center_vertical"
        android:padding="10dp"
        android:text="@string/strHome"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnMyProfile"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_weight="1"
        android:background="@color/dark_grey_cancel_button"
        android:gravity="left|center_vertical"
        android:padding="10dp"
        android:text="@string/strMyProfile"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <Button
        android:id="@+id/btnMyReport"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:background="@color/dark_grey_cancel_button"
        android:gravity="left|center_vertical"
        android:padding="10dp"
        android:text="@string/strMyReport"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp"
        android:visibility="visible" />

    <Button
        android:id="@+id/btnPlans"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:background="@color/dark_grey_cancel_button"
        android:gravity="left|center_vertical"
        android:padding="10dp"
        android:text="Upgrade Plan"
        android:visibility="gone"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <Button
        android:id="@+id/btnHelpAndSupport"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:background="@color/dark_grey_cancel_button"
        android:gravity="left|center_vertical"
        android:padding="10dp"
        android:text="@string/strHelpAndSupport"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <Button
        android:id="@+id/btnLogOut"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:background="@color/dark_grey_cancel_button"
        android:gravity="left|center_vertical"
        android:padding="10dp"
        android:text="@string/strLogOut"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:textSize="17sp" />

    <Button
        android:id="@+id/btnLanguage"
        android:layout_width="200dp"
        android:layout_height="wrap_content"
        android:layout_marginTop="1dp"
        android:layout_weight="1"
        android:background="@color/dark_grey_cancel_button"
        android:gravity="left|center_vertical"
        android:padding="10dp"
        android:text="@string/strLanguage"
        android:textAllCaps="false"
        android:textColor="@color/white"
        android:visibility="gone" />
</LinearLayout>