<?xml version="1.0" encoding="utf-8"?>
<LinearLayout xmlns:android="http://schemas.android.com/apk/res/android"
    xmlns:tools="http://schemas.android.com/tools"
    android:id="@+id/activity_login_screen"
    android:layout_width="match_parent"
    android:layout_height="match_parent"
    android:background="@drawable/main_bg_with_vector"
    tools:context="com.adms.saralpayAgent.LoginScreen">

    <ScrollView
        android:layout_width="match_parent"
        android:layout_height="wrap_content"
        android:layout_alignParentLeft="true"
        android:layout_alignParentStart="true"
        android:layout_alignParentTop="true"
        android:fillViewport="true"
        android:scrollbars="none">

        <LinearLayout
            android:layout_width="match_parent"
            android:layout_height="wrap_content"
            android:orientation="vertical">

            <TextView
                android:id="@+id/txtVersionCode"
                android:layout_width="wrap_content"
                android:layout_height="wrap_content"
                android:layout_gravity="right"
                android:layout_margin="5dp"
                android:text="1.0"
                android:textColor="@color/gray" />

            <ImageView
                android:id="@+id/imgLoginScreenLogo"
                android:layout_width="350dp"
                android:layout_height="270dp"
                android:layout_alignParentTop="true"
                android:layout_gravity="center_horizontal"
                android:layout_marginTop="0dp"
                android:src="@drawable/logo"
                android:visibility="visible" />

            <LinearLayout
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_above="@+id/llButtonLayout"
                android:layout_below="@+id/imgLoginScreenLogo"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">

                <EditText
                    android:id="@+id/edtPhoneNumber"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:background="@drawable/box1"
                    android:gravity="center"
                    android:hint="@string/strPhoneNumber"
                    android:inputType="number"
                    android:maxLength="10"
                    android:padding="10dp"
                    android:singleLine="true" />

                <EditText
                    android:id="@+id/edtPinPwd"
                    android:layout_width="match_parent"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="10dp"
                    android:background="@drawable/box1"
                    android:gravity="center"
                    android:hint="@string/strPinPwd"
                    android:imeOptions="actionDone"
                    android:inputType="numberPassword"
                    android:maxLength="10"
                    android:padding="10dp"
                    android:singleLine="true" />

            </LinearLayout>


            <LinearLayout
                android:id="@+id/llButtonLayout"
                android:layout_width="match_parent"
                android:layout_height="match_parent"
                android:layout_marginTop="30dp"
                android:orientation="vertical"
                android:paddingLeft="30dp"
                android:paddingRight="30dp">

                <Button
                    android:id="@+id/btnLogin"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:background="@color/login_btn_red"
                    android:text="@string/strLogin"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold" />

                <TextView
                    android:id="@+id/txtForgotPwd"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/strForgotPwd"
                    android:textColor="@color/gray"
                    android:textSize="18sp"
                    android:textStyle="normal"
                    android:visibility="visible" />

                <Button
                    android:id="@+id/btnRegister"
                    android:layout_width="match_parent"
                    android:layout_height="40dp"
                    android:layout_marginTop="10dp"
                    android:background="@color/gray"
                    android:text="@string/strREGISTER"
                    android:textColor="@color/white"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="gone"/>

                <TextView
                    android:id="@+id/txtForNewUsers"
                    android:layout_width="wrap_content"
                    android:layout_height="wrap_content"
                    android:layout_marginTop="5dp"
                    android:text="@string/strForNewUsers"
                    android:textColor="@color/black"
                    android:textSize="16sp"
                    android:textStyle="bold"
                    android:visibility="gone" />

            </LinearLayout>
        </LinearLayout>
    </ScrollView>
</LinearLayout>
